--- a/main.tex
+++ b/main.tex
@@ -15,28 +15,12 @@
 	%spanish, % Uncomment for Spanish
 ]{mwhw}
 
-% Chinese and Fonts
-\usepackage{ctex}
-
 % Norm enhanced. Use \norm{}
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 
 % Template-specific packages
 \usepackage[utf8]{inputenc} % Required for inputting international characters
 \usepackage[T1]{fontenc} % Output font encoding for international characters
-\usepackage{mathpazo} % Use the Palatino font
-
-\usepackage{graphicx} % Required for including images
-
-\usepackage{booktabs} % Required for better horizontal rules in tables
-
-\usepackage{listings} % Required for insertion of code
-
-\usepackage{enumerate} % To modify the enumerate environment
-
-\usepackage{tikz} % Required for tikzpicture
-
-\usepackage{longtable} % Required for longtable
 
 %----------------------------------------------------------------------------------------
 %	ASSIGNMENT INFORMATION
@@ -302,8 +286,36 @@ Q7Q8 & 0 & 0 & 1 & 1 \\* \bottomrule
 \label{tab:3}\\
 \end{longtable}
 
+\section{代码}
+\begin{lstlisting}
+#include <stdio.h>
+#include <pthread.h>
 
-
+int value=0;
+void *runner(void *param); /* the thread */
+int main()
+{
+   int pid;
+   pthread_t tid;
+   pthread_attr_t attr;
+   pid=fork();
+   if(pid==0)
+   {
+      pthread_attr_init(&attr);
+      pthread_create(&tid, &attr, runner, NULL);
+      pthread_join(tid, NULL);
+      printf("CHILD: value=%d\n", value);  /* LINE C */
+   }else if(pid>0){
+      wait(NULL);
+      printf("PARENT: value=%d\n",value);　/* LINE P */
+   }
+}
+void *runner(void *param)
+{
+   value=5;
+   pthread_exit(0);
+}
+\end{lstlisting}
 
 \end{document}
 
