修改了tcb环境

--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 	%letterpaper, % Uncomment for US letter paper size
 	cn, % Uncomment for Chinese
 	%spanish, % Uncomment for Spanish
-]{mwhw}
+]{mwhw2}
 
 % Norm enhanced. Use \norm{}
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
@@ -52,10 +52,10 @@
 %	ASSIGNMENT CONTENT
 %----------------------------------------------------------------------------------------
 
-\section*{问题框}
+\section*{第一章}
 
-\begin{problem}
-	证明:范数$\norm{\cdot}$的对偶范数满足范数的定义
+\begin{problem}{证明}
+	范数$\norm{\cdot}$的对偶范数满足范数的定义
 	\begin{equation*}
 	    \norm{z}_*=sup\{z^Tx:\ \norm{x}\leq1\}=sup\{z^Tx:\ \norm{x}=1\}
 	\end{equation*}
